@@ -17,7 +17,7 @@ int main(int argc, char **argv)
     if (argc == 1) {
 	fdi = fdDup(STDIN_FILENO);
     } else {
-	fdi = fdOpen(argv[1], O_RDONLY, 0644);
+	fdi = ufdOpen(argv[1], O_RDONLY, 0644);
     }
 
     if (fdFileno(fdi) < 0) {
