@@ -2,6 +2,7 @@
 	- use compressed filenames on install side.
 	- start unifying FD types, CFD_t now gone.
 	- check for memory leaks (almost all leaks are plugged).
+	- fix: resurrect multiple target platform builds.
 
 3.0.2 -> 3.0.3
 	- add --eval to find result of macro expansion.
